--- a/servletapp/src/main/webapp/error.html
+++ b/servletapp/src/main/webapp/error.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Please Enter Correct Details</title>
 </head>
 <body>
-$END$
+    <p> Incorrect User Details</p>
 </body>
 </html>
